add calendar nav bar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/footbook?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-jdbc.username=jacob
-jdbc.password=huang0535
+jdbc.username=admin
+jdbc.password=admin
 
 
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
